--- a/src/index.css
+++ b/src/index.css
@@ -386,6 +386,14 @@ html .clear-completed:active {
 	text-decoration: underline;
 }
 
+.empty-list {
+	line-height: 59px;
+	color: rgb(149, 149, 149);
+	font-size: 24px;
+	vertical-align: middle;
+	text-align: center;
+}
+
 /*
 	Hack to remove background from Mobile Safari.
 	Can't use it globally since it destroys checkboxes in Firefox
